@@ -53,6 +53,8 @@ Release 0.20.0 - Unreleased
    HBASE-1268  ZooKeeper config parsing can break HBase startup
                (Nitay Joffe via Stack)
    HBASE-1270  Fix TestInfoServers (Nitay Joffe via Stack)
+   HBASE-1277  HStoreKey: Wrong comparator logic (Evgeny Ryabitskiy)
+   HBASE-1275  TestTable.testCreateTable broken (Ryan Rawson via Stack)
 
   IMPROVEMENTS
    HBASE-1089  Add count of regions on filesystem to master UI; add percentage
